[gd_scene load_steps=84 format=2]

[ext_resource path="res://art/sprites/characters/enemies/Dragon/dragon_IDLE_green.png" type="Texture" id=1]
[ext_resource path="res://art/sprites/characters/enemies/Dragon/dragon_MELEE_green.png" type="Texture" id=2]
[ext_resource path="res://art/sprites/characters/enemies/Dragon/dragon_LAUNCH_NO_SHADOW_green.png" type="Texture" id=3]
[ext_resource path="res://scripts/Boss_Sprite.gd" type="Script" id=4]
[ext_resource path="res://art/Miscellaneous/shadow.png" type="Texture" id=5]
[ext_resource path="res://art/audio/music/SpeedQuest - (BOSS 1).wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/Dragon_Boss.gd" type="Script" id=7]
[ext_resource path="res://art/sprites/characters/enemies/Dragon/dragon_HOVER_NO_SHADOW_green.png" type="Texture" id=9]
[ext_resource path="res://art/sprites/characters/enemies/Dragon/dragon_FLY_NO_SHADOW_green.png" type="Texture" id=10]
[ext_resource path="res://art/sprites/characters/enemies/Dragon/dragon_FIREBREATH_green.png" type="Texture" id=11]
[ext_resource path="res://scripts/Stair.tscn" type="PackedScene" id=12]
[ext_resource path="res://art/sprites/characters/enemies/Dragon/dragon_WALK_green.png" type="Texture" id=13]
[ext_resource path="res://scenes/Projectile.tscn" type="PackedScene" id=14]
[ext_resource path="res://art/audio/sfx/Hit (Taking Damage)/hit2.wav" type="AudioStream" id=18]
[ext_resource path="res://art/audio/sfx/Hit (Taking Damage)/hit1.wav" type="AudioStream" id=19]
[ext_resource path="res://art/audio/sfx/Hit (Taking Damage)/hit3.wav" type="AudioStream" id=20]
[ext_resource path="res://art/audio/sfx/Hit (Taking Damage)/hit4.wav" type="AudioStream" id=21]
[ext_resource path="res://EnemyAudio.gd" type="Script" id=22]
[ext_resource path="res://scripts/PlayerRB.gd" type="Script" id=27]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.7306
height = 0.0

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 11 )
region = Rect2( 768, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 11 )
region = Rect2( 864, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 11 )
region = Rect2( 960, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 11 )
region = Rect2( 1056, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 11 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 11 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 11 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 11 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 11 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 11 )
region = Rect2( 1056, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 11 )
region = Rect2( 1152, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 11 )
region = Rect2( 1248, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 11 )
region = Rect2( 1344, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 11 )
region = Rect2( 1440, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 10 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 10 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 10 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 9 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 9 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 1 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 3 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 13 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 13 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 13 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 13 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 13 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 83 ) ],
"loop": true,
"name": "dragon_fire",
"speed": 5.0
}, {
"frames": [ SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": false,
"name": "dragon_firestart",
"speed": 6.0
}, {
"frames": [ SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ) ],
"loop": false,
"name": "dragon_firestop",
"speed": 5.0
}, {
"frames": [ SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ) ],
"loop": true,
"name": "dragon_flying",
"speed": 5.0
}, {
"frames": [ SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ) ],
"loop": true,
"name": "dragon_hover",
"speed": 5.0
}, {
"frames": [ SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "dragon_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ) ],
"loop": false,
"name": "dragon_land",
"speed": 5.0
}, {
"frames": [ SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ) ],
"loop": false,
"name": "dragon_launch",
"speed": 8.0
}, {
"frames": [ SubResource( 122 ), SubResource( 123 ), SubResource( 124 ) ],
"loop": true,
"name": "dragon_swipe",
"speed": 5.0
}, {
"frames": [ SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 121 ) ],
"loop": true,
"name": "dragon_swipestart",
"speed": 5.0
}, {
"frames": [ SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ) ],
"loop": true,
"name": "dragon_walk",
"speed": 5.0
} ]

[node name="Boss" type="Node2D" groups=["Enemies"]]
script = ExtResource( 7 )
projectile = ExtResource( 14 )
stair = ExtResource( 12 )

[node name="BossBody" type="RigidBody2D" parent="."]
collision_layer = 162
collision_mask = 162
mode = 3
contacts_reported = 10
contact_monitor = true
script = ExtResource( 27 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossBody"]
position = Vector2( -2, 14.551 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="BossAudio" type="Node2D" parent="BossBody"]
script = ExtResource( 22 )
__meta__ = {
"_edit_lock_": true
}
hitsounds = [ ExtResource( 19 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 21 ) ]

[node name="Sprite" type="AnimatedSprite" parent="BossBody"]
position = Vector2( 0, 5 )
scale = Vector2( 1.5, 1.5 )
z_index = 5
z_as_relative = false
frames = SubResource( 13 )
animation = "dragon_land"
frame = 7
playing = true
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Shadow" type="Sprite" parent="BossBody"]
modulate = Color( 0, 0, 0, 0.627451 )
position = Vector2( -1.5, 20 )
scale = Vector2( 0.25, 0.171 )
texture = ExtResource( 5 )

[node name="Line2D" type="Line2D" parent="."]
z_index = 4096
z_as_relative = false
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_shape_entered" from="BossBody" to="." method="_on_RigidBody2D_body_shape_entered"]
